--- a/.github/workflows/essentialsplugins-betabuilds.yml
+++ b/.github/workflows/essentialsplugins-betabuilds.yml
@@ -73,6 +73,11 @@ jobs:
               $phase = 'hotfix'
               $newVersionString = "{0}.{1}.{2}-{3}-{4}" -f $newVersion.Major, $newVersion.Minor, ($newVersion.Build + 1), $phase, $Env:GITHUB_RUN_NUMBER
             }
+            default {
+              $phase = 'beta'
+              $newVersionString = "{0}.{1}.{2}-{3}-{4}" -f $newVersion.Major, $newVersion.Minor, ($newVersion.Build + 1), $phase, $Env:GITHUB_RUN_NUMBER
+            }
+            
           }      
           echo "VERSION=$newVersionString" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       # Use the version number to set the version of the assemblies
