--- a/.github/workflows/essentialsplugins-builds.yml
+++ b/.github/workflows/essentialsplugins-builds.yml
@@ -6,7 +6,7 @@ on:
       branch:
         required: true
         type: string
-      defualt-branch: 
+      default-branch: 
         required: true
         type: string
 
