--- a/.github/workflows/essentialsplugins-builds.yml
+++ b/.github/workflows/essentialsplugins-builds.yml
@@ -17,6 +17,7 @@ env:
   BUILD_TYPE: Debug
   # Defaults to master as the release branch.  Change as necessary
   RELEASE_BRANCH: ${{ inputs.defualt-branch }}
+  TEST: ${{ inputs.env.GITHUB_REF_NAME }}
 
   UPLOAD_URL: "${{ github.event.release.upload_url }}"
 
@@ -37,7 +38,7 @@ jobs:
         run: git fetch --tags
       # Generate the appropriate version number
       - name: CheckForRelease
-        if: ${{ inputs.branch }} == ${{ inputs.defualt-branch }}
+        if: ${{ inputs.env.GITHUB_REF_NAME ==  inputs.defualt-branch }}
         run: |
           echo "BUILD_TYPE=Release" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       - name: Set Version Number
