--- a/.github/workflows/essentialsplugins-builds.yml
+++ b/.github/workflows/essentialsplugins-builds.yml
@@ -17,7 +17,7 @@ env:
   BUILD_TYPE: Debug
   # Defaults to master as the release branch.  Change as necessary
   RELEASE_BRANCH: ${{ inputs.defualt-branch }}
-  TEST: ${{ inputs.env.GITHUB_REF_NAME }}
+  TEST: ${{ inputs.branch }}
 
   UPLOAD_URL: "${{ github.event.release.upload_url }}"
 
