--- a/.github/workflows/essentialsplugins-builds.yml
+++ b/.github/workflows/essentialsplugins-builds.yml
@@ -17,7 +17,7 @@ env:
   BUILD_TYPE: Debug
   # Defaults to master as the release branch.  Change as necessary
   RELEASE_BRANCH: ${{ inputs.defualt-branch }}
-  TEST: ${{ inputs.branch }}
+  TEST: ${{ igithub.ref.name }}
 
   UPLOAD_URL: "${{ github.event.release.upload_url }}"
 
@@ -32,13 +32,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.branch}}
+          ref: ${{ inputs.branch }}
       # Fetch all tags
       - name: Fetch tags
         run: git fetch --tags
       # Generate the appropriate version number
       - name: CheckForRelease
-        if: ${{ inputs.env.GITHUB_REF_NAME ==  inputs.defualt-branch }}
+        if: ${{ TEST  ==  inputs.defualt-branch }}
         run: |
           echo "BUILD_TYPE=Release" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       - name: Set Version Number
