--- a/.github/workflows/essentialsplugins-builds.yml
+++ b/.github/workflows/essentialsplugins-builds.yml
@@ -17,8 +17,6 @@ env:
   BUILD_TYPE: Debug
   # Defaults to master as the release branch.  Change as necessary
   RELEASE_BRANCH: ${{ inputs.defualt-branch }}
-  TEST: ${{ github.ref.name }}
-
   UPLOAD_URL: "${{ github.event.release.upload_url }}"
 
 
@@ -38,7 +36,7 @@ jobs:
         run: git fetch --tags
       # Generate the appropriate version number
       - name: CheckForRelease
-        if: ${{ env.test ==  inputs.defualt-branch }}
+        if: ${{ inputs.branch  ==  inputs.defualt-branch }}
         run: |
           echo "BUILD_TYPE=Release" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       - name: Set Version Number
