--- a/.github/workflows/essentialsplugins-builds.yml
+++ b/.github/workflows/essentialsplugins-builds.yml
@@ -16,7 +16,7 @@ env:
   # Defaults to debug for build type
   BUILD_TYPE: Debug
   # Defaults to master as the release branch.  Change as necessary
-  RELEASE_BRANCH: ${{ inputs.defualt-branch }}
+  RELEASE_BRANCH: ${{ inputs.default-branch }}
   UPLOAD_URL: "${{ github.event.release.upload_url }}"
 
 
@@ -36,7 +36,7 @@ jobs:
         run: git fetch --tags
       # Generate the appropriate version number
       - name: CheckForRelease
-        if: ${{ inputs.branch  ==  inputs.defualt-branch }}
+        if: ${{ inputs.branch  ==  inputs.default-branch }}
         run: |
           echo "BUILD_TYPE=Release" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       - name: Set Version Number
