fix: nuspec creation

--- a/.github/workflows/essentialsplugins-builds.yml
+++ b/.github/workflows/essentialsplugins-builds.yml
@@ -276,10 +276,11 @@ jobs:
           $makeModel = ($repoName -split '-')[1..2] -join ''
           $makeModel = [System.Text.RegularExpressions.Regex]::Replace($makeModel, '(\B[A-Z])', ' $1')
           $makeModel = $makeModel -replace ' ', ''
-          echo '<?xml version="1.0" encoding="utf-8"?>
+          $nuspecContent = @"
+          <?xml version="1.0" encoding="utf-8"?>
           <package >
             <metadata>
-              <id>PepperDash.Essentials.Plugin.' + $makeModel + '</id>
+              <id>PepperDash.Essentials.Plugin.$makeModel</id>
               <version>${{ env.VERSION }}</version>
               <title>${{ github.repository_name }} EPI</title>
               <authors>PepperDash Technologies</authors>
@@ -287,7 +288,7 @@ jobs:
               <requireLicenseAcceptance>false</requireLicenseAcceptance>
               <license type="expression">MIT</license>
               <projectUrl>https://github.com/${{ github.repository }}</projectUrl>
-              <copyright>Copyright ' + $year + '</copyright>
+              <copyright>Copyright $year</copyright>
               <description>${{ github.repository_name }} Epi</description>
               <tags>crestron 3series 4series</tags>
               <repository type="git" url="https://github.com/${{ github.repository }}"/>
@@ -296,7 +297,10 @@ jobs:
               <file src="**" target="lib\net35"/>
               <file src="**" target="lib\net47"/>
             </files>
-          </package>' > ${{ github.workspace }}\project.nuspec
+          </package>
+          "@
+          echo $nuspecContent > ${{ github.workspace }}\project.nuspec
+
       - name: Download Build output
         uses: actions/download-artifact@v1
         with:
