--- a/.github/workflows/essentialsplugins-builds.yml
+++ b/.github/workflows/essentialsplugins-builds.yml
@@ -280,7 +280,7 @@ jobs:
           <?xml version="1.0" encoding="utf-8"?>
           <package >
             <metadata>
-              <id>PepperDash.Essentials.Plugin.$makeModel</id>
+              <id>PepperDash.Essentials.Plugin.$($makeModel)</id>
               <version>${{ env.VERSION }}</version>
               <title>${{ github.repository_name }} EPI</title>
               <authors>PepperDash Technologies</authors>
@@ -288,7 +288,7 @@ jobs:
               <requireLicenseAcceptance>false</requireLicenseAcceptance>
               <license type="expression">MIT</license>
               <projectUrl>https://github.com/${{ github.repository }}</projectUrl>
-              <copyright>Copyright $year</copyright>
+              <copyright>Copyright $($year)</copyright>
               <description>${{ github.repository_name }} Epi</description>
               <tags>crestron 3series 4series</tags>
               <repository type="git" url="https://github.com/${{ github.repository }}"/>
