--- a/.github/workflows/essentialsplugins-builds.yml
+++ b/.github/workflows/essentialsplugins-builds.yml
@@ -332,14 +332,14 @@ jobs:
       # Creating nuget Packages
       - name: Add Github Packages source
         if: "!contains(env.NUSPEC_FILE, 'EssentialsPluginTemplate')"
-        run: nuget sources add -name github -source https://nuget.pkg.github.com/pepperdash/index.json -username Pepperdash -password ${{ secrets.GITHUB_TOKEN }}
+        run: nuget sources add -name github -source https://nuget.pkg.github.com/pepperdash/index.json -username ${{ secrets.GH_PACKAGE_TESTING_USER }} -password ${{ secrets.GH_PACKAGE_TESTING }}
       - name: Create nuget package
         if: "!contains(env.NUSPEC_FILE, 'EssentialsPluginTemplate')"
         run: nuget pack "./project.nuspec" -version ${{ env.VERSION }}  
       # Pushes to internal github registry
       - name: Publish nuget package to Github registry
         if: "!contains(env.NUSPEC_FILE, 'EssentialsPluginTemplate')"
-        run: nuget push **/*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }}
+        run: nuget push **/*.nupkg -source github -apikey ${{ secrets.GH_PACKAGE_TESTING }} -username ${{ secrets.GH_PACKAGE_TESTING_USER }}
       # Pushes to nuget gallery
       - name: Add nuget.org API Key
         if: github.repository_owner == 'PepperDash' && github.repository_visibility == 'public' && !contains(env.NUSPEC_FILE, 'EssentialsPluginTemplate')
