--- a/.github/workflows/essentialsplugins-builds.yml
+++ b/.github/workflows/essentialsplugins-builds.yml
@@ -214,20 +214,21 @@ jobs:
           name: Version
           path: ${{ env.GITHUB_HOME }}/output/version.txt
 
-
       - name: Create Release
-        if: ${{ env.BUILD_TYPE != 'Release' }}
+        if:  ${{ env.BUILD_TYPE  != 'Release' }}
         id: create_release
-        uses: actions/create-release@v1 # Updated to a compatible version or alternative
+        uses: fleskesvor/create-release@feature/support-target-commitish
         with:
-          tag_name: ${{ env.VERSION }}
+          tag_name: ${{ env.VERSION  }}
           release_name: ${{ env.VERSION }}
-          prerelease: ${{ contains('debug', env.BUILD_TYPE) }}
+          prerelease: ${{contains('debug', env.BUILD_TYPE)}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set release url Release
-        run: echo "UPLOAD_URL=${{ steps.create_release.outputs.upload_url }}" >> $GITHUB_ENV
+        if: ${{ env.BUILD_TYPE  != 'Release' }}
+        run: |
+          echo "UPLOAD_URL=${{ steps.create_release.outputs.upload_url }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Upload Release Package
         uses: actions/upload-release-asset@v1 # Check for an updated version supporting Node.js 20
