fix: correct syntax errors

--- a/.github/workflows/essentialsplugins-getversion.yml
+++ b/.github/workflows/essentialsplugins-getversion.yml
@@ -9,6 +9,7 @@ on:
       default-branch: 
         required: true
         type: string 
+jobs:
   GetVersionNumber:
     runs-on: ubuntu-latest
     outputs:
