--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -143,7 +143,7 @@ jobs:
           commit: ${{ github.sha }}
           bodyFile: ./CHANGELOG.md
   Push_Nuget_Package:
-    needs: [GetVersionNumber, Build_Project]
+    needs: Build_Project_3-Series
     runs-on: windows-latest
     env:
       VERSION: ${{ needs.GetVersionNumber.outputs.version }}
