--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -43,8 +43,43 @@ jobs:
       - name: Update AssemblyInfo.cs
         shell: powershell
         run: |
-          Write-Output ${{ env.VERSION }}
-          ./.github/scripts/UpdateAssemblyVersion.ps1 ${{ env.VERSION }}
+          function Update-SourceVersion {
+          Param ([string]$Version)
+          #$fullVersion = $Version
+          $baseVersion = [regex]::Match($Version, "(\d+.\d+.\d+).*").captures.groups[1].value
+          $NewAssemblyVersion = 'AssemblyVersion("' + $baseVersion + '.*")'
+          Write-Output "AssemblyVersion = $NewAssemblyVersion"
+          $NewAssemblyInformationalVersion = 'AssemblyInformationalVersion("' + $Version + '")'
+          Write-Output "AssemblyInformationalVersion = $NewAssemblyInformationalVersion"
+          foreach ($o in $input) {
+              Write-output $o.FullName
+              $TmpFile = $o.FullName + ".tmp"
+              get-content $o.FullName |
+              ForEach-Object {
+                  $_ -replace 'AssemblyVersion\(".*"\)', $NewAssemblyVersion } |
+              ForEach-Object {
+                  $_ -replace 'AssemblyInformationalVersion\(".*"\)', $NewAssemblyInformationalVersion
+              }  > $TmpFile 
+              move-item $TmpFile $o.FullName -force
+            }
+          }
+          function Update-AllAssemblyInfoFiles ( $version ) {
+              foreach ($file in "AssemblyInfo.cs", "AssemblyInfo.vb" ) {
+                  get-childitem -Path $Env:GITHUB_WORKSPACE -recurse | Where-Object { $_.Name -eq $file } | Update-SourceVersion $version ;
+              }
+          }
+          # validate arguments
+          $r = [System.Text.RegularExpressions.Regex]::Match($Env:VERSION, "\d+\.\d+\.\d+.*");
+          if ($r.Success) {
+              Write-Output "Updating Assembly Version to $Env:VERSION ...";
+              Update-AllAssemblyInfoFiles $Env:VERSION;
+          }
+          else {
+              Write-Output " ";
+              Write-Output "Error: Input version $Env:VERSION does not match x.y.z format!"
+              Write-Output " ";
+              Write-Output "Unable to apply version to AssemblyInfo.cs files";
+          }
       - name: restore Nuget Packages
         run: nuget install .\packages.config -OutputDirectory .\packages -ExcludeVersion
       # Login to Docker
