--- a/.github/workflows/essentialsplugins-4Series-builds.yml
+++ b/.github/workflows/essentialsplugins-4Series-builds.yml
@@ -55,9 +55,9 @@ jobs:
       - name: Setup MS Build
         uses: microsoft/setup-msbuild@v1.1
       - name: restore Nuget Packages
-        run: nuget restore .\4-series\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln
+        run: nuget restore .\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln
       - name: Build Solution        
-        run: msbuild .\4-series\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln /p:Platform="Any CPU" /p:Configuration="Debug" /p:Version="${{ inputs.version }}" -m   
+        run: msbuild .\${{ steps.get_sln_info.outputs.SOLUTION_FILE }}.sln /p:Platform="Any CPU" /p:Configuration="Debug" /p:Version="${{ inputs.version }}" -m   
       - name: Get release notes
         uses: actions/download-artifact@v3
         with:
